--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -20,25 +20,27 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock  Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="3" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        
-        <TextBlock  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        
-        <TextBlock  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        
-        <TextBlock  Grid.Column="0" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
-        <TextBlock  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center"/>
+        <TextBlock  Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="3" Grid.Row="0" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+
+        <TextBlock  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="3" Grid.Row="1" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+
+        <TextBlock  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="3" Grid.Row="2" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+
+        <TextBlock  Grid.Column="0" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="2" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Center" FontSize="36" Text="?" VerticalAlignment="Center" MouseDown="TextBlock_MouseDown"/>
+
+        <TextBlock x:Name="timeTextBlock" Text="Elapsed Time" Grid.ColumnSpan="4" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" MouseDown="TimeTextBlock_MouseDown_1" />
 
     </Grid>
 </Window>
